trunk/agresso-servers.template
{
    "AWSTemplateFormatVersion": "2010-09-09", 
    "Description": "Template CloudFormation script for Agresso environments - builds MS Windows servers.", 
    "Mappings": {
        "AWSAMI": {
            "Windows2012R2": {
                "AMI": "ami-d3dee9b5"
            }, 
            "NAT": {
                "AMI": "ami-076d5d61"
            }
        }, 
        "EJSubnetConfig": {
            "ACADEMY-6": {
                "CIDR": "10.66.0.0/16"
            }, 
            "ACADEMY-4": {
                "CIDR": "10.67.0.0/16"
            },
            "HANGER89-6": {
                "CIDR": "10.65.0.0/16"
            }, 
            "HANGER89-4": {
                "CIDR": "10.64.0.0/16"
            }
        }, 
        "AWSSubnetConfig": {
            "PrivateA": {
                "CIDR": "10.10.21.0/25"
            }, 
            "PrivateB": {
                "CIDR": "10.10.21.128/25"
            }, 
            "PrivateC": {
                "CIDR": "10.10.22.0/25"
            }, 
            "PrivateD": {
                "CIDR": "10.10.22.128/25"
            }, 
            "PublicA": {
                "CIDR": "10.10.20.0/25"
            }, 
            "PublicB": {
                "CIDR": "10.10.20.128/25"
            }, 
            "VPC": {
                "CIDR": "10.10.20.0/22"
            }
        }
    }, 
    "Parameters": {
        "KeyName": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of existing SSH Keypair", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        },
        "VPC": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "VPC where instances should be deployed", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        },
        "PrivateSubnetAppA": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Subnet where instances should be deployed", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }
    }, 
    "Resources": {
        "AgressoAppServer": {
            "DependsOn": [ "AgressoAppServerSecurityGroup", "AgressoWebServerSecurityGroup", "AgressoUNCSecurityGroup" ], 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Windows2012R2", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "AgressoAppServerSecurityGroup"
                    },
                    {
                        "Ref": "AgressoWebServerSecurityGroup"
                    },
                    {
                        "Ref": "AgressoUNCSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PrivateSubnetAppA"
                }, 
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Agresso Web / Application Server"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "AgressoSQLServer": {
            "DependsOn": [ "AgressoSQLServerSecurityGroup", "AgressoUNCSecurityGroup" ], 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Windows2012R2", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "AgressoSQLServerSecurityGroup"
                    },
                    {
                        "Ref": "AgressoUNCSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PrivateSubnetAppA"
                }, 
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Agresso Application Server"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "AgressoAppServerSecurityGroup": {
            "Properties": {
                "GroupDescription": "Agresso App Server Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Server Security Group"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        },
        "AgressoWebServerSecurityGroup": {
            "Properties": {
                "GroupDescription": "Agresso Web Server Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    }, 
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    }, 
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "80"
                    },
                    {
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "80"
                    },  
                    {
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "80"
                    },
                    {
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "80"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Server Security Group"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        },
        "AgressoUNCSecurityGroup": {
            "Properties": {
                "GroupDescription": "Agresso UNC Access Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "FromPort": "137", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "137"
                    }, 
                    {
                        "FromPort": "137", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "137"
                    }, 
                    {
                        "FromPort": "137", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "137"
                    },
                    {
                        "FromPort": "137", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "137"
                    },
                    {
                        "FromPort": "138", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "138"
                    }, 
                    {
                        "FromPort": "138", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "138"
                    }, 
                    {
                        "FromPort": "138", 
                        "IpProtocol": "tcp", 
                        "CirdIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "138"
                    },
                    {
                        "FromPort": "138", 
                        "IpProtocol": "tcp", 
                        "CirdIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "138"
                    },
                    {
                        "FromPort": "139", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "139"
                    }, 
                    {
                        "FromPort": "139", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "139"
                    }, 
                    {
                        "FromPort": "139", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "139"
                    },
                    {
                        "FromPort": "139", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "139"
                    },
                    {
                        "FromPort": "-1", 
                        "IpProtocol": "icmp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "-1"
                    }, 
                    {
                        "FromPort": "-1", 
                        "IpProtocol": "icmp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "-1"
                    }, 
                    {
                        "FromPort": "-1", 
                        "IpProtocol": "icmp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "-1"
                    },
                    {
                        "FromPort": "-1", 
                        "IpProtocol": "icmp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "-1"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Server Security Group"
                    }
                ], 
                "VpcId": {
                   "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        },
        "AgressoSQLServerSecurityGroup": {
            "Properties": {
                "GroupDescription": "Agresso SQL DB Server Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    }, 
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    }, 
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "3389", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "3389"
                    },
                    {
                        "FromPort": "1433", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "1433"
                    }, 
                    {
                        "FromPort": "1433", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "ACADEMY-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "1433"
                    }, 
                    {
                        "FromPort": "1433", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-6", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "1433"
                    },
                    {
                        "FromPort": "1433", 
                        "IpProtocol": "tcp", 
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "EJSubnetConfig", 
                                "HANGER89-4", 
                                "CIDR"
                            ]
                        }, 
                        "ToPort": "1433"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Project", 
                        "Value": "InsertProject"
                    }, 
                    {
                        "Key": "Criticality", 
                        "Value": "InsertCriticality"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "OperatingSystem", 
                        "Value": "InsertOperatingSystem"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Server Security Group"
                    }
                ], 
                "VpcId": {
                   "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
